Make backpack a post Remove posts and categories from bottom Fix layout on mobile

--- a/css/main.less
+++ b/css/main.less
@@ -166,11 +166,6 @@ a:hover   { color: @hoverColor; }
     }
 }
 
-.about {
-    font-size: 14px;
-    margin-right: 20px;
-}
-
 .location>span {
     margin-right: 8px;
     font-size: 13pt;
@@ -417,7 +412,7 @@ a:hover   { color: @hoverColor; }
             margin-top: 2em;
         }
         margin-bottom: 1em;
-        font-size: 180%;
+        font-size: 150%;
     }
 
     h2 {
@@ -425,7 +420,7 @@ a:hover   { color: @hoverColor; }
             margin-top: 1.5em;
         }
         margin-bottom: 1em;
-        font-size: 150%;
+        font-size: 135%;
     }
 
     h3 {
@@ -629,16 +624,40 @@ a:hover   { color: @hoverColor; }
     // }
 }
 
-@media screen and (max-width: 500px)
+#smallAbout {
+    display: none;
+}
+
+@media screen and (max-width: 400px)
 {
+    .headerLeft {
+        text-align: center;
+        float: none !important;
+    }
+    .headerRight {
+        display: none;
+    }
+    #smallAbout {
+        display: block;
+    }
+    .headerCategories {
+        margin-bottom: 20px;
+        >span {
+            display: block;
+            line-height: 35px;
+        }
+    }
     .posts>li {
         margin-bottom: 4em;
     }
-    // .header {
-    //     margin-bottom: 20px;
-    // }
+    .about {
+        font-size: 17px;
+    }
+    .header {
+        margin-bottom: 20px;
+    }
     .postTitle {
-        font-size: 200%;
+        font-size: 160%;
         line-height: 40px;
     }
 }
